# spoolbuddy

./: .dockerignore  .gitignore  .gitmodules  CABLING_PLAN.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.test  README.md  SECURITY.md  SPOOLBUDDY_PLAN.md  docker-compose.test.yml  docker-compose.yml  test_backend.sh  test_docker.sh  test_frontend.sh
backend/: config.py  main.py  models.py  requirements.txt  usage_tracker.py
eez/: spoolbuddy.eez-project
firmware/: Cargo.toml  update_eez_screens.sh
frontend/: eslint.config.js  (+5 more)
lvgl-simulator-sdl/: CMakeLists.txt  backend_client.h  lv_conf.h  main.c  run.sh  sim_compat.h  sim_mocks.c  sync_and_build.sh
lvgl-simulator-sdl/esp_stubs/: esp_log.h  nvs.h  nvs_flash.h
lvgl-simulator-sdl/ui/: actions.h  fonts.h  images.c  images.h  screens.c  screens.h  structs.h  styles.c  styles.h  ui.c  ui_image_3d_cube.c  ui_image_about.c  ui_image_add.c  ui_image_ams.c  ui_image_ams_setup.c  ui_image_amssetup.c  ui_image_back.c  ui_image_bell.c  ui_image_bell_preview.c  ui_image_calibrate.c  ui_image_catalog.c  ui_image_display.c  ui_image_dot.c  ui_image_encode_preview.c  ui_image_encoding.c  ui_image_fd_calibration_auto_n7.c  ui_image_fd_calibration_auto_single_o.c  ui_image_filament_load_o_series.c  ui_image_filament_spool.c  ui_image_firmware.c  ui_image_home.c  ui_image_humidity.c  ui_image_humidity_mockup.c  ui_image_logo_28x28_preview.c  ui_image_monitor_extruder_empty_load.c  ui_image_monitor_extruder_empty_unload.c  ui_image_monitor_extruder_filled_load.c  ui_image_monitor_extruder_filled_unload.c  ui_image_mqtt.c  ui_image_nfc.c  (+35 more)
(+159 files in other folders)
